fixed footer spacing

--- a/css/card.css
+++ b/css/card.css
@@ -69,7 +69,7 @@
 .card__footer {
 
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
 
   border-top: 1px solid var(--gray-50);
   padding: 20px;
